# TalesEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  ReadMe.md  TalesEngine.cpp  TalesEngine.h  Todo.md  compileShaders.bat
include/: glad.c
include/glad/: glad.h
lib/: OpenAL32.lib  sndfile.lib
resources/models/: Test.fbx  cow.fbx  untitled.fbx
resources/shaders/: default.frag  default.vert  default2D.frag  default2D.vert
resources/textures/: Untitled.png~
src/: Application.cpp  Application.hpp  CMakeLists.txt  Camera.cpp  Camera.h  Game.cpp  Game.h  Helper.hpp  Main.cpp  Main.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Shader.hpp  Window.cpp  Window.h  main.cpp
src/Engine/: Shader.hpp  WindowManager.hpp
src/Engine/Objects/: GameObject.hpp
src/Game/: Game.cpp  Game.h  GameObject.cpp  GameObject.h  TestObject.cpp  TestObject.h
src/Graphics/: Display.cpp  Display.h  LogicalDevices.cpp  LogicalDevices.hpp  Shader.cpp  Shader.h
src/Graphics/2D/: Camera2D.cpp  Camera2D.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture2D.cpp  Texture2D.h
src/Graphics/3D/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/Model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h
src/Sound/: SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h  SoundSource.cpp  SoundSource.h
src/assets/models/: Box.fbx  Floor.fbx  scene.fbx
src/assets/scenes/: test.json
src/assets/shaders/: fragmentShader.glsl  vertexShader.glsl
